<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_height"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_name"
        android:inputType="textAutoComplete"
        android:layout_margin="@dimen/big_padding"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_height"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_address"
        android:inputType="textAutoComplete"
        android:layout_margin="@dimen/big_padding"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_height"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_phone"
        android:inputType="phone"
        android:layout_margin="@dimen/big_padding"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/button_save"
        android:layout_marginStart="@dimen/big_padding"
        android:layout_marginEnd="@dimen/big_padding"
        android:layout_marginTop="@dimen/small_padding"
        android:textColor="@color/buttonLabel" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:background="@color/colorAccent"
        android:text="@string/button_delete"
        android:layout_marginStart="@dimen/big_padding"
        android:layout_marginEnd="@dimen/big_padding"
        android:layout_marginTop="@dimen/small_padding"
        android:textColor="@android:color/white"
        android:visibility="gone"/>

    <Button
        android:id="@+id/button_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:background="@color/colorPrimary"
        android:text="@string/button_back"
        android:layout_marginStart="@dimen/big_padding"
        android:layout_marginEnd="@dimen/big_padding"
        android:layout_marginTop="@dimen/small_padding"
        android:textColor="@color/colorPrimary" />

</LinearLayout>